data/derived/sp14/progs/unify/prog0286.ml.out
Characters 74-80:
  | h::t -> rev (h::x) t in
                ^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'b -> 'c
